--- a/media/stylesheets/base.css
+++ b/media/stylesheets/base.css
@@ -14,4 +14,8 @@
   min-height: 90px;
   border-bottom: 5px solid #595959; }
 
+.center_text {
+  text-align: center !important;
+  width: 100% !important; }
+
 /*# sourceMappingURL=base.css.map */
