--- a/media/stylesheets/scss/base.scss
+++ b/media/stylesheets/scss/base.scss
@@ -30,3 +30,9 @@ $darkergrey: #353535;
     min-height: 90px; 
     border-bottom: 5px solid $darkgrey;
 }
+
+// Spacing
+.center_text{
+    text-align: center !important;
+    width: 100% !important; 
+}
