--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -13,11 +13,21 @@
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
-      <script type="text/javascript">
+      <!-- <script type="text/javascript">
           $(window).ready(function(){
               $("#myModal").modal('show');
           });
-      </script>
+      </script> -->
+
+    <script src="static/scripts/change_flex_on_screen_change.js"></script>
+    <script>
+        window.onresize = (event) => {
+            // change_side_bar_height()
+            change_flex_on_screen_change()
+            // make_bottom_images_correct_widths()
+            // make_images_correct_heights() 
+        }
+    </script>
     <title></title>
   </head>
   <body style="height: 100%; margin: 0;" class="lightergrey_background">
