--- a/media/stylesheets/scss/base.scss
+++ b/media/stylesheets/scss/base.scss
@@ -36,3 +36,7 @@ $darkergrey: #353535;
     text-align: center !important;
     width: 100% !important; 
 }
+
+.vertical_align{
+    margin: auto !important;
+}
