--- a/media/stylesheets/base.css
+++ b/media/stylesheets/base.css
@@ -18,4 +18,7 @@
   text-align: center !important;
   width: 100% !important; }
 
+.vertical_align {
+  margin: auto !important; }
+
 /*# sourceMappingURL=base.css.map */
