--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -1,5 +1,17 @@
-<ul>
-    <li>
-        <a href="/admin/golf">Golf Classic 2017</a>
-    </li>
-</ul>
+{% extends "custAdmin/admin_base.html" %}
+
+{% block content %}
+    <div class="container">
+        <ul>
+            <li>
+                <a href="/admin/golf">People</a>
+            </li>
+            <li>
+                <a href="/admin/golf">Golf Outings </a>
+            </li>
+        </ul>
+    </div>
+    
+{% endblock content %}
+
+
