Add date picker to date

--- a/custAdmin/templates/custAdmin/form.html
+++ b/custAdmin/templates/custAdmin/form.html
@@ -275,11 +275,11 @@
                 {{f}}
         {% endfor %} -->
         <div id="frm">
-            <label for="description">Year:  </label>
-            <input type="text" name="year" id="year" value="{{data.year}}"><br>
+            <!-- <label for="description">Year:  </label>
+            <input type="text" name="year" id="year" value="{{data.year}}"><br> -->
     
             <label for="full_date">Full Date:  </label>
-            <input type="text" name="full_date" id="full_date" value="{{data.date_str}}"><br>
+            <input type="date" name="full_date" id="full_date" value="{{data.date}}"><br>
     
             <label for="golf_course">Golf Course:  </label>
             <input type="text" name="golf_course" id="golf_course" value="{{data.course}}"><br>
