--- a/custAdmin/templates/custAdmin/admin_base.html
+++ b/custAdmin/templates/custAdmin/admin_base.html
@@ -52,9 +52,14 @@
         </div>
       </nav>
       <!--/.Navbar -->
-
-      {% block content%}
-      {% endblock content%}
+      {% if user.is_authenticated %}
+        {% block content%}
+        {% endblock content%}
+      {% else %}
+        <p>You are not logged in</p>
+        <a href="{% url 'login' %}">Log In</a>
+      {% endif %}
+      
 
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
