--- a/custAdmin/templates/custAdmin/form.html
+++ b/custAdmin/templates/custAdmin/form.html
@@ -1,265 +1,268 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script> 
-        var day_count=0;
-        var event_count=[];
+    
+</head> -->
+{% extends "custAdmin/admin_base.html" %}
 
-        var event_image_count = 0;
-        var sponsor_image_count = 0;
+{% block content %}
+<script> 
+    var day_count=0;
+    var event_count=[];
 
-        function pop_nodes_after_day(day_count_val)
-        {
-            var nodes = document.getElementById('frm').children
-            var popped_nodes = []
-            
-            var found_index = 0
+    var event_image_count = 0;
+    var sponsor_image_count = 0;
 
-            for (node in nodes){
-                if (nodes[node].id === 'day_' + (day_count_val + 1)
-                    || nodes[node].id === 'sponsor_image_btn'
-                    || nodes[node].id === 'event_image_btn'){
-                        found_index = parseInt(node) - 2
-                        break
-                }
-                if (nodes[node].id === 'submit'){
-                        found_index = parseInt(node)
-                        break
-                }
+    function pop_nodes_after_day(day_count_val)
+    {
+        var nodes = document.getElementById('frm').children
+        var popped_nodes = []
+        
+        var found_index = 0
+
+        for (node in nodes){
+            if (nodes[node].id === 'day_' + (day_count_val + 1)
+                || nodes[node].id === 'sponsor_image_btn'
+                || nodes[node].id === 'event_image_btn'){
+                    found_index = parseInt(node) - 2
+                    break
             }
-
-            for (n in nodes){
-                if (n >= found_index){
-                    var node = nodes[n]
-                    popped_nodes.push(node)
-                }
+            if (nodes[node].id === 'submit'){
+                    found_index = parseInt(node)
+                    break
             }
-
-            for (p of popped_nodes){
-                    p.remove()
-            }
-
-            return popped_nodes
         }
 
-        function pop_nodes_for_event_image()
-        {
-            var nodes = document.getElementById('frm').children
-            var popped_nodes = []
-            
-            var found_index = 0
-
-            for (node in nodes){
-                if (nodes[node].id === 'sponsor_image_btn'){
-                        found_index = parseInt(node) - 2
-                        break
-                }
-                if (nodes[node].id === 'submit'){
-                        found_index = parseInt(node)
-                        break
-                }
+        for (n in nodes){
+            if (n >= found_index){
+                var node = nodes[n]
+                popped_nodes.push(node)
             }
-
-            for (n in nodes){
-                if (n >= found_index){
-                    var node = nodes[n]
-                    popped_nodes.push(node)
-                }
-            }
-
-            for (p of popped_nodes){
-                    p.remove()
-            }
-
-            return popped_nodes
         }
 
-        function pop_nodes_for_sponsor_image()
-        {
-            var nodes = document.getElementById('frm').children
-            var popped_nodes = []
-            
-            var found_index = 0
+        for (p of popped_nodes){
+                p.remove()
+        }
 
-            for (node in nodes){
-                if (nodes[node].id === 'submit'){
-                        found_index = parseInt(node) - 1
-                        break
-                }
+        return popped_nodes
+    }
+
+    function pop_nodes_for_event_image()
+    {
+        var nodes = document.getElementById('frm').children
+        var popped_nodes = []
+        
+        var found_index = 0
+
+        for (node in nodes){
+            if (nodes[node].id === 'sponsor_image_btn'){
+                    found_index = parseInt(node) - 2
+                    break
             }
-
-            for (n in nodes){
-                if (n >= found_index){
-                    var node = nodes[n]
-                    popped_nodes.push(node)
-                }
+            if (nodes[node].id === 'submit'){
+                    found_index = parseInt(node)
+                    break
             }
+        }
 
-            for (p of popped_nodes){
-                    p.remove()
+        for (n in nodes){
+            if (n >= found_index){
+                var node = nodes[n]
+                popped_nodes.push(node)
             }
+        }
 
-            return popped_nodes
+        for (p of popped_nodes){
+                p.remove()
+        }
+
+        return popped_nodes
+    }
+
+    function pop_nodes_for_sponsor_image()
+    {
+        var nodes = document.getElementById('frm').children
+        var popped_nodes = []
+        
+        var found_index = 0
+
+        for (node in nodes){
+            if (nodes[node].id === 'submit'){
+                    found_index = parseInt(node) - 1
+                    break
+            }
+        }
+
+        for (n in nodes){
+            if (n >= found_index){
+                var node = nodes[n]
+                popped_nodes.push(node)
+            }
+        }
+
+        for (p of popped_nodes){
+                p.remove()
+        }
+
+        return popped_nodes
+    }
+    
+    // https://stackoverflow.com/questions/17087636/how-to-save-data-from-a-form-with-html5-local-storage
+
+    function store_vals()
+    {
+        var nodes = document.getElementById('frm').children
+        var ids = []
+
+        for (node of nodes){
+            if (node.id.length > 0 ){
+                ids.push(node)
+            }
         }
         
-        // https://stackoverflow.com/questions/17087636/how-to-save-data-from-a-form-with-html5-local-storage
-
-        function store_vals()
+        for (id of ids)
         {
-            var nodes = document.getElementById('frm').children
-            var ids = []
-
-            for (node of nodes){
-                if (node.id.length > 0 ){
-                    ids.push(node)
-                }
-            }
-            
-            for (id of ids)
-            {
-                if (id.id.includes('image') && !id.id.includes('btn')){
-                    
-                } else {
-                    localStorage.setItem(id.id, id.value);
-                }
-            }
-            
-        }
-
-        function write_vals()
-        {
-            var nodes = document.getElementById('frm').children
-            var ids = []
-
-            for (node of nodes){
-                if (node.id.length > 0 ){
-                    ids.push(node)
-                }
-            }
-            
-            for (id of ids)
-            {
-                if (!id.id.includes('image')){
-                    id.value = localStorage.getItem(id.id);
-                }
+            if (id.id.includes('image') && !id.id.includes('btn')){
+                
+            } else {
+                localStorage.setItem(id.id, id.value);
             }
         }
-
-        function add_new_day_to_schedule()
-        {
-            // ev.preventDefault();
-
-            store_vals()
-            popped_nodes = pop_nodes_after_day(99)
-
-            document.getElementById('frm').innerHTML+='<br/><label for="description">Date:</label>';
-            document.getElementById('frm').innerHTML+='<input type="text" id="day_'+day_count+'" name="day_'+day_count+'" placeholder="Day '+day_count+'"  /><br/>';
-            document.getElementById('frm').innerHTML+='<button onClick="add_event_to_day('+day_count+')"> Add Event to Day</button><br>'
-
-            event_count.push(0)
-            day_count++;
-
-            for (pop of popped_nodes)
-            {
-                document.getElementById('frm').appendChild(pop);
-            }
-            
-            write_vals()
-
-            // return false;
-        }
-
-        function add_event_to_day(day_count_val)
-        {
-            store_vals()
-
-            popped_nodes = pop_nodes_after_day(day_count_val)
-
-            day_count_event_count_str = 'day_'+day_count_val+'_event_'+event_count[day_count_val]
-            
-            document.getElementById('frm').innerHTML+='<label for="description">Time:</label>';
-            document.getElementById('frm').innerHTML+='<input type="text" id="'+day_count_event_count_str + '_time" name="'+day_count_event_count_str + '_time" placeholder="'+day_count_event_count_str +'"  /><br/>';
-            document.getElementById('frm').innerHTML+='<label for="description">Description:</label>';
-            document.getElementById('frm').innerHTML+='<input type="text" id="'+day_count_event_count_str + '_description" name="'+day_count_event_count_str + '_description" placeholder="'+day_count_event_count_str+'"  /><br/>';
-            
-            for (pop of popped_nodes)
-            {
-                document.getElementById('frm').appendChild(pop);
-            }
-            
-            event_count[day_count_val]++;
-
-            write_vals()
-            
-        }
-
-        function add_event_image()
-        {
-            store_vals()
-
-            popped_nodes = pop_nodes_for_event_image()
-
-            var image_input = document.createElement('input')
-            image_input.id = 'event_image_' + event_image_count
-            image_input.name = 'event_images'
-            image_input.type = 'file'
-
-            document.getElementById('frm').appendChild(image_input)
-            document.getElementById('frm').appendChild(document.createElement('br'))
-            
-            for (pop of popped_nodes)
-            {
-                document.getElementById('frm').appendChild(pop);
-            }
-
-            event_image_count++;
-
-            write_vals()
-            
-        }
-
-        function add_sponsor_image()
-        {
-            store_vals()
-
-            popped_nodes = pop_nodes_for_sponsor_image()
-
-            var image_input = document.createElement('input')
-            image_input.id = 'event_image_' + sponsor_image_count
-            image_input.name = 'sponsor_images'
-            image_input.type = 'file'
-
-            document.getElementById('frm').appendChild(image_input)
-            document.getElementById('frm').appendChild(document.createElement('br'))
-
-            for (pop of popped_nodes)
-            {
-                document.getElementById('frm').appendChild(pop);
-            }
-
-            sponsor_image_count++;
-            write_vals()
-            
-        }
-
-        window.onload = (event) => {
-            localStorage.clear();
-            document.getElementById('day_btn').onclick = (event) => {
-                console.log('HELLO')
-                event.preventDefault();
-                add_new_day_to_schedule();
-                return false;
-            }
-        }
-
         
-    </script>
-</head>
-<body>
+    }
+
+    function write_vals()
+    {
+        var nodes = document.getElementById('frm').children
+        var ids = []
+
+        for (node of nodes){
+            if (node.id.length > 0 ){
+                ids.push(node)
+            }
+        }
+        
+        for (id of ids)
+        {
+            if (!id.id.includes('image')){
+                id.value = localStorage.getItem(id.id);
+            }
+        }
+    }
+
+    function add_new_day_to_schedule()
+    {
+        // ev.preventDefault();
+
+        store_vals()
+        popped_nodes = pop_nodes_after_day(99)
+
+        document.getElementById('frm').innerHTML+='<br/><label for="description">Date:</label>';
+        document.getElementById('frm').innerHTML+='<input type="text" id="day_'+day_count+'" name="day_'+day_count+'" placeholder="Day '+day_count+'"  /><br/>';
+        document.getElementById('frm').innerHTML+='<button onClick="add_event_to_day('+day_count+')"> Add Event to Day</button><br>'
+
+        event_count.push(0)
+        day_count++;
+
+        for (pop of popped_nodes)
+        {
+            document.getElementById('frm').appendChild(pop);
+        }
+        
+        write_vals()
+
+        // return false;
+    }
+
+    function add_event_to_day(day_count_val)
+    {
+        store_vals()
+
+        popped_nodes = pop_nodes_after_day(day_count_val)
+
+        day_count_event_count_str = 'day_'+day_count_val+'_event_'+event_count[day_count_val]
+        
+        document.getElementById('frm').innerHTML+='<label for="description">Time:</label>';
+        document.getElementById('frm').innerHTML+='<input type="text" id="'+day_count_event_count_str + '_time" name="'+day_count_event_count_str + '_time" placeholder="'+day_count_event_count_str +'"  /><br/>';
+        document.getElementById('frm').innerHTML+='<label for="description">Description:</label>';
+        document.getElementById('frm').innerHTML+='<input type="text" id="'+day_count_event_count_str + '_description" name="'+day_count_event_count_str + '_description" placeholder="'+day_count_event_count_str+'"  /><br/>';
+        
+        for (pop of popped_nodes)
+        {
+            document.getElementById('frm').appendChild(pop);
+        }
+        
+        event_count[day_count_val]++;
+
+        write_vals()
+        
+    }
+
+    function add_event_image()
+    {
+        store_vals()
+
+        popped_nodes = pop_nodes_for_event_image()
+
+        var image_input = document.createElement('input')
+        image_input.id = 'event_image_' + event_image_count
+        image_input.name = 'event_images'
+        image_input.type = 'file'
+
+        document.getElementById('frm').appendChild(image_input)
+        document.getElementById('frm').appendChild(document.createElement('br'))
+        
+        for (pop of popped_nodes)
+        {
+            document.getElementById('frm').appendChild(pop);
+        }
+
+        event_image_count++;
+
+        write_vals()
+        
+    }
+
+    function add_sponsor_image()
+    {
+        store_vals()
+
+        popped_nodes = pop_nodes_for_sponsor_image()
+
+        var image_input = document.createElement('input')
+        image_input.id = 'event_image_' + sponsor_image_count
+        image_input.name = 'sponsor_images'
+        image_input.type = 'file'
+
+        document.getElementById('frm').appendChild(image_input)
+        document.getElementById('frm').appendChild(document.createElement('br'))
+
+        for (pop of popped_nodes)
+        {
+            document.getElementById('frm').appendChild(pop);
+        }
+
+        sponsor_image_count++;
+        write_vals()
+        
+    }
+
+    window.onload = (event) => {
+        localStorage.clear();
+        document.getElementById('day_btn').onclick = (event) => {
+            console.log('HELLO')
+            event.preventDefault();
+            add_new_day_to_schedule();
+            return false;
+        }
+    }
+
+    
+</script>
     <form method="post">
         {% csrf_token%}
             <!-- year = forms.CharField()
@@ -277,28 +280,27 @@
         <div id="frm">
             <!-- <label for="description">Year:  </label>
             <input type="text" name="year" id="year" value="{{data.year}}"><br> -->
-    
+
             <label for="full_date">Full Date:  </label>
             <input type="date" name="full_date" id="full_date" value="{{data.date}}"><br>
-    
+
             <label for="golf_course">Golf Course:  </label>
             <input type="text" name="golf_course" id="golf_course" value="{{data.course}}"><br>
-    
+
             <label for="description">Description:</label><br>
             <textarea type="text" name="description" id="description" value="John" rows="6" cols="50"> {{data.descr}} </textarea><br><br>
             <label for="description">Schedule -- </label>
             <input id="day_btn" type="button" onClick="add_new_day_to_schedule(event); return false" value="Add Day to Schedule"><br>
-    
+
             <br><label for="description">Event Images -- </label>
             <input id="event_image_btn" type="button" onClick="add_event_image(); return false" value="Add Image to Event"><br>
             
-    
+
             <br><label for="description">Sponsor Images -- </label>
             <input id="sponsor_image_btn" type="button" onClick="add_sponsor_image(); return false" value="Add Sponsor Image to Event"><br><br>
-    
+
             <button id="submit" type="submit"> Submit</button>
         </div>
         
     </form>
-</body>
-</html>
+{% endblock content %}
