--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -65,10 +65,22 @@
               <a class="nav-link primary_text" href="/our-team">Our Team</a>
             </li>
 
+            {% if newsActive%} <li class="nav-item active" style="margin: auto;">
+            {% else %} <li class="nav-item" style="margin: auto;">
+            {% endif %}
+                <a class="nav-link primary_text" href="/helping-others">Helping Others</a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="/" style="padding: 0 !important;">
                     <img src="/static/images/paying_it_forward.png" style="height: 80px">
                 </a>
+            </li>
+
+            {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
+            {% else %} <li class="nav-item" style="margin: auto;">
+            {% endif %}
+                <a class="nav-link primary_text" href="/golf-classic-2017">Get Invloved</a>
             </li>
 
             {% if scheduleActive%} <li class="nav-item active" style="margin: auto;"> 
