--- a/src/templates/src/golf_classic_involvement.html
+++ b/src/templates/src/golf_classic_involvement.html
@@ -9,6 +9,8 @@
             <p>Hello</p>
         </div>
     </div> -->
+    <script src="https://js.stripe.com/v3/"></script>
+    <!-- <script src="/static/scripts/client.js" defer></script> -->
     <div class="container">
         <h4>Golf Registration</h4>
         <div class="card">
@@ -18,6 +20,10 @@
                         <h6>Single Golfer Registration.</h6>
                     </div>
                     <div class="col-6">
+                        <form id="payment-form" action="/create-checkout-session-view" method="POST">
+                            {% csrf_token%}
+                                <button type="submit">Checkout</button>
+                          </form>
                     </div>
                 </div>
             </div>
