Add payment processing for foursome

--- a/src/templates/src/golf_classic.html
+++ b/src/templates/src/golf_classic.html
@@ -15,8 +15,9 @@
         <h5 class="text-center">{{date_str}} at {{course}}</h5>
         {% if is_golf_registration %}
             <h4 class="text-center">Sponsorship Opportunites and Golfer Registration Open Now</h4>
+            <a class="nav-link primary_text text-center" href="/golf-classic-{{date_code}}/involvement"><h6>Get Invloved</h6></a>
         {% endif %}
-        <button class="text-center">
+        <!-- <button class="text-center"> -->
             
         </button>
         <div class="row">
