--- a/src/templates/src/golf_classic_involvement.html
+++ b/src/templates/src/golf_classic_involvement.html
@@ -10,6 +10,15 @@
         </div>
     </div> -->
     <script src="https://js.stripe.com/v3/"></script>
+    <script>
+        function open_form(div_id_open, div_id_close)
+        {
+            document.getElementById(div_id_open).style.display = '';
+            document.getElementById(div_id_close).style.display = 'none';
+        }
+
+    
+    </script>
     <!-- <script src="/static/scripts/client.js" defer></script> -->
     <div class="container">
         <h4>Golf Registration</h4>
@@ -22,8 +31,47 @@
                     <div class="col-6">
                         <form id="payment-form" action="/create-checkout-session-view" method="POST">
                             {% csrf_token%}
+                            <button type="submit">Checkout</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-6">
+                        <h6>Foursome Golfer Registration.</h6>
+                    </div>
+                    <div class="col-6">
+                        <div id="foursome_div" style="display:none">
+                            <form id="payment-form" action="/create-checkout-session-view-{{date_code}}" method="POST">
+                                {% csrf_token%}
+                                <label>Contact Email:</label>
+                                <input type="text" name="email" id="email" value="{{data.course}}"><br>
+                                <label>Golfer 1 First Name:</label>
+                                <input type="text" name="fname_1" id="fname_1" value="{{data.course}}"><br>
+                                <label>Golfer 1 Last Name:</label>
+                                <input type="text" name="lname_1" id="lname_1" value="{{data.course}}"><br>
+                                <label>Golfer 2 First Name:</label>
+                                <input type="text" name="fname_2" id="fname_2" value="{{data.course}}"><br>
+                                <label>Golfer 2 Last Name:</label>
+                                <input type="text" name="lname_2" id="lname_2" value="{{data.course}}"><br>
+                                <label>Golfer 3 First Name:</label>
+                                <input type="text" name="fname_3" id="fname_3" value="{{data.course}}"><br>
+                                <label>Golfer 3 Last Name:</label>
+                                <input type="text" name="lname_3" id="lname_3" value="{{data.course}}"><br>
+                                <label>Golfer 4 First Name:</label>
+                                <input type="text" name="fname_4" id="fname_4" value="{{data.course}}"><br>
+                                <label>Golfer 4 Last Name:</label>
+                                <input type="text" name="lname_4" id="lname_4" value="{{data.course}}"><br>
                                 <button type="submit">Checkout</button>
-                          </form>
+                                <button onclick="open_form('foursome_div_btn','foursome_div')" type="button">Close</button>
+                            </form>
+                        </div>
+                        <div id="foursome_div_btn">
+                            <button onclick="open_form('foursome_div', 'foursome_div_btn')">Register</button>
+                        </div>
                     </div>
                 </div>
             </div>
