Serve images from user upload

--- a/custAdmin/templates/custAdmin/form.html
+++ b/custAdmin/templates/custAdmin/form.html
@@ -235,7 +235,7 @@
 
         var image_input = document.createElement('input')
         image_input.id = 'event_image_' + sponsor_image_count
-        image_input.name = 'sponsor_images'
+        image_input.name = 'sponsor_images'  + sponsor_image_count
         image_input.type = 'file'
 
         document.getElementById('frm').appendChild(image_input)
