--- a/src/templates/src/home.html
+++ b/src/templates/src/home.html
@@ -1,5 +1,39 @@
 {% extends "src/base.html" %}
 
 {% block content %}
-    <h1>Hello</h1>
+<!-- <script type="text/javascript" src="/test/wp-content/themes/child/script/jquery.jcarousel.min.js"></script> -->
+    <div class="container">
+        <h1 class="text-center">S3C</h1>
+        <h4 class="text-center">Supporting the Cancer Community since 2009</h4>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/static/images/golf/2017/flier.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                
+                <img src="/static/images/golf/2017/unrolledloop.png" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <!-- <img src="/static/images/golf/2017/unrolledloop.png" class="d-block w-100"> -->
+                <p>Hello</p>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+    
+    
 {% endblock content %}
